Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-15945

--ps-protocol does not test some queries

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Fixed
    • 5.5(EOL), 10.0(EOL), 10.1(EOL), 10.2(EOL), 10.3(EOL)
    • 10.2.23, 10.1.39, 10.3.14, 10.4.4
    • Tests
    • None

    Description

      --ps-protocol do not test:
      EXPLAIN
      ANALYSE
      CALL
      and so on

      List of what it test is here:

       const char *ps_re_str =
          "^("
          "[[:space:]]*REPLACE[[:space:]]|"
          "[[:space:]]*INSERT[[:space:]]|"
          "[[:space:]]*UPDATE[[:space:]]|"
          "[[:space:]]*DELETE[[:space:]]|"
          "[[:space:]]*SELECT[[:space:]]|"
          "[[:space:]]*CREATE[[:space:]]+TABLE[[:space:]]|"
          "[[:space:]]*DO[[:space:]]|"
          "[[:space:]]*SET[[:space:]]+OPTION[[:space:]]|"
          "[[:space:]]*DELETE[[:space:]]+MULTI[[:space:]]|"
          "[[:space:]]*UPDATE[[:space:]]+MULTI[[:space:]]|"
          "[[:space:]]*INSERT[[:space:]]+SELECT[[:space:]])";
      

      May be it has sense prohibit queries which has no sens, but allow all.

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              sanja Oleksandr Byelkin
              Votes:
              1 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: